# maglab

./: Cargo.toml  README.md  TODOs.md
maglab/: Cargo.toml
maglab/data/: db.json
maglab/src/: main.rs
maglab/src/gui/: screen.rs
src/: app.rs  keys.rs  main.rs  tabs.rs
