[package]
name = "maglab"
version = "0.1.0"
authors = ["mihaimaganu17"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(all(target_os = "macos", target_arch = "x86_64"))'.dependencies]
termion = "1.5"
crossterm = { version = "0.19", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = { version = "0.8.3" }
tui = { version = "0.14", default-features = false, features = ['crossterm'] }
thiserror = "1.0"


[target.'cfg(windows)'.dependencies]
tui = { version = "0.14", default-features = false, features = ['crossterm'] }
crossterm = "0.19"
